BJS2-84085 Сделал дефолтные методы в репозиториях